[metadata]
name = obligate
author = Ozone
author-email = justin.hammond@rackspace.com
summary = A migration tool for melange to quark
description-file = README.rst
license = Apache-2
home-page = http://github.com/roaet/obligate
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    obligate

[hooks]
setup-hooks =
    pbr.hooks.setup_hook
